fixed bug where no-wrap css property doesn't change parent div
just got rid of the no wrap and combined Qty + Symbol into 1 text

--- a/styles/CryptoCard.module.scss
+++ b/styles/CryptoCard.module.scss
@@ -10,7 +10,6 @@ $font-size: 1.5rem;
     }
     .row{
         font-size: $font-size;
-        white-space: nowrap;
         color:rgb(46, 46, 46);
         margin-bottom: 2%;
     }
